@@ -803,4 +803,52 @@ collections {
 		 }
       }
    }
+   group { name: "access_color_page";
+      parts {
+         part { name: "red"; type: RECT;
+            description { state: "default" 0.0;
+              rel1 { relative: 0.1  0.1;
+              }
+              rel2 { relative: 0.35 0.35;
+              }
+              color: 255 0 0 255;
+            }
+         }
+         part { name: "green"; type: RECT;
+            description { state: "default" 0.0;
+              rel1 { relative: 0.65 0.1;
+              }
+              rel2 { relative: 0.9 0.35;
+              }
+              color: 0 255 0 255;
+            }
+         }
+         part { name: "blue"; type: RECT;
+            description { state: "default" 0.0;
+              rel1 { relative: 0.1 0.65;
+              }
+              rel2 { relative: 0.35. 0.9;
+              }
+              color: 0 0 255 255;
+            }
+         }
+         part { name: "black"; type: RECT;
+            description { state: "default" 0.0;
+              rel1 { relative: 0.65  0.65;
+              }
+              rel2 { relative: 0.9 0.9;
+              }
+              color: 0 0 0 255;
+            }
+         }
+         part { name: "center"; type: SWALLOW;
+            description { state: "default" 0.0;
+              rel1 { relative: 0.35 0.35;
+              }
+              rel2 { relative: 0.65 0.65;
+              }
+            }
+         }
+      }
+   }
 }
